--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -5,6 +5,10 @@
   font-family: "Poppins", sans-serif;
 }
 
+html{
+  background-color: black;
+}
+
 /*.navBg{
    width: 100%;
   height: 120px;
@@ -14,6 +18,10 @@
   justify-content: space-between;  
   
 }*/
+
+.react-datepicker-wrapper{
+  width: 100%;
+}
 
 .navbar {
   width: 100%;
@@ -44,7 +52,7 @@
   position: absolute;
   top: 0;
   left: 0;
-  width: 95%;
+  width: 100%;
   height: 100%;
   background-color: rgb(50, 50, 50);
   opacity: 0.8;
@@ -85,7 +93,7 @@
 }
 
 .signup-button {
-  background-color: #6798ff;
+   
   padding: 12px 23px;
   border-radius: 10px;
   color: white;
@@ -107,13 +115,13 @@
   display: flex;
   flex-direction: column;
   position: absolute;
-  top: 100px;
+  top: 80px;
   right: 20px;
   background-color: rgba(0, 0, 0, 0.9);
   padding: 20px;
   border-radius: 8px;
   z-index: 10;
-  /* width: calc(100% - 40px); */
+   width: calc(60%);
 }
 .navbar-links.mobile-menu a {
   margin: 10px 0;
@@ -137,6 +145,10 @@
   .navbar-signup {
     display: none;
   }
+
+  .page-contact .MuiContainer-root {
+    height: 100vh;
+   }
 }
 .showSignUp{
   display: none;
@@ -172,6 +184,7 @@
   .navbar {
     /* height: auto;  Adjust height dynamically */
     padding: 10px 0px;
+    height: 80px;
   }
 
   .navbar-links {
@@ -189,8 +202,15 @@
   .showSignUp{
     display: block;
   }
+
+  .hero-container {
+    height: 89vh;
+  }
 }
 
+label a{
+  color: peru;
+}
 
 /* Language Dropdown */
 .navbar-language {
@@ -233,3 +253,22 @@
 .language-dropdown li:hover {
   background-color: rgba(0, 0, 0, 0.1);
 }
+
+@media (max-width: 678px) {
+  
+ 
+  .page-contact, .page-terms{
+    background: #fff;
+    height: 100vh;
+  }
+
+   .page-forgot-password, .page-reset-password, .page-verify-opt{
+    background: #fff;
+  }
+
+  .page-verify-opt{
+    height: 100vh;
+  }
+}
+
+
