--- a/src/Components/Register.css
+++ b/src/Components/Register.css
@@ -100,22 +100,32 @@
 
   .label-gap4 {
     border: 1.5px solid gray;
-    margin-left: 2.1rem;
-    width: 200px;
+    margin-left: 0rem;
+    width: 100%;
     height: 30px;
   }
   .label-gap5 {
     border: 1.5px solid gray;
-    margin-left: 2.4rem;
-    width: 200px;
+    margin-left: 0rem;
+    width: 100%;
     height: 30px;
   }
 
 
   .label-gap6 {
     border: 1.5px solid gray;
-    margin-left: 4.6rem;
-    width: 200px;
+    margin-left: 0rem;
+    width: 100%;
     height: 30px;
   }
+
+  
+}
+
+@media (max-width: 1024px) {
+  .registerContainer .fields {
+    margin: 30px 0;
+    display: flex;
+    flex-wrap: wrap;
+ }
 }
