--- a/src/Components/Register.css
+++ b/src/Components/Register.css
@@ -63,7 +63,7 @@
     max-width: 239px;
     width: 100%;
     margin: 20px auto;
-    background-color: #FB5E36;
+    background-color: #fe8735;
   padding: 9px 19px;
   /* width: 93%; */
 
